--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
               >
             </p>
             <p>
-              Founded Class Lens in 2022. Mr. Rosa has over 15 years of operational
-              excellence experience and is PMP certified. He was most recently the
-              Director of Implementations at DataLink Software from 2020 to 2023. He was
-              the Claims Operations Manager at UPC Insurance from 2018 to 2020 and the
-              Claims Operations Manager for Sedgwick CMS from 2016 to 2018.<!--  -->
+              Entrepreneur and Executive Leader<!--  -->
             </p></td>
       </tr>
     </table>
