Added "Claims" to Experience
Added "Claims" to "National Operations Manager at UPC Insurance"

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </tr>
       <tr>
         <td>2018-2020</td>
-        <td>National Operations Manager at UPC Insurance</td>
+        <td>National Claims Operations Manager at UPC Insurance</td>
       </tr>
       <tr>
         <td>2016-2018</td>
